LinKreta_POC_Repository/force-app/main/default/objects/Joint_Venture__c/Joint_Venture__c.object-meta.xml
<CustomObject>
    <label>Joint Venture</label>
    <nameField>
        <label>Joint Venture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Joint Ventures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>