LinKreta_POC_Repository/force-app/main/default/objects/Joint_Venture__c/fields/Company_Identificaton_Numb__c.field-meta.xml
<CustomField>
    <fullName>Company_Identificaton_Numb__c</fullName>
    <label>Company Identificaton Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>