LinKreta_POC_Repository/force-app/main/default/objects/Joint_Venture__c/fields/ExternalDataSource__c.field-meta.xml
<CustomField>
    <fullName>ExternalDataSource__c</fullName>
    <description>Record is created from where</description>
    <label>External Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CapIQ</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>