LinKreta_POC_Repository/force-app/main/default/objects/Joint_Venture__c/fields/IQ_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>IQ_Transaction_ID__c</fullName>
    <label>IQ Transaction ID</label>
    <type>TextArea</type>
</CustomField>