LinKreta_POC_Repository/force-app/main/default/objects/Joint_Venture__c/fields/new_client__c.field-meta.xml
<CustomField>
    <fullName>new_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Joint Ventures</relationshipLabel>
    <relationshipName>Joint_Venture</relationshipName>
    <type>Lookup</type>
</CustomField>