LinKreta_POC_Repository/force-app/main/default/objects/Joint_Venture__c/fields/Percentage_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Shares__c</fullName>
    <label>Percentage of Shares</label>
    <length>30</length>
    <type>Text</type>
</CustomField>